[FIX] : Removed extra space above Footer
.footer-empty-div now have the height from 200px to 40px

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,5 +1,5 @@
 .footer-empty-div {
-  height: 250px;
+  height: 40px;
 }
 
 .footer-container-fluid {
